--- a/reference.bib
+++ b/reference.bib
@@ -8,7 +8,8 @@
   title={{Quantum Field Theory for the Gifted Amateur}},
   author={Tom Lancaster and Stephen J. Blundell},
   year={2023},
-  publisher={世界图书出版公司}
+  publisher={世界图书出版公司},
+  pages={10--17}
 }
 @book{peskinCausality,
   title={{Introduction to Quantum Field Theory}},
@@ -65,4 +66,40 @@
   publisher={科学出版社},
   pages={196--221},
   chapter={附录B}
+}
+@article{LieSpinor,
+  title={{Dérivées de Lie des spineurs}},
+  journal={Annali di Matematica},
+  volume={91},
+  pages={317–395}, 
+  year={1971},
+  author={Kosmann, Y}
+}
+@book{schwartz-dyson,
+  author = {Matthew D. Schwartz},
+  publisher = {Cambridege University Press},
+  title = {Quantum Field Theory and the Standard Model},
+  year = {2014},
+  pages={87--89},
+}
+@book{qft-amatuer-interaction-picture,
+  title={{Quantum Field Theory for the Gifted Amateur}},
+  author={Tom Lancaster and Stephen J. Blundell},
+  year={2023},
+  publisher={世界图书出版公司},
+  pages={167--169}
+}
+@book{SchroederClusterExpansion,
+  title={{An Introduction to Thermal Physics}},
+  author={Daniel V. Schroeder},
+  year={2022},
+  publisher={Pearson Education Inc.},
+  pages={246--254}
+}
+@book{LiuChuanIsing,
+  title={{热力学与统计物理}},
+  author={刘川},
+  year={2022},
+  publisher={北京大学出版社},
+  pages={142--150}
 }
