--- a/packages.tex
+++ b/packages.tex
@@ -68,6 +68,7 @@
 % \renewcommand{\dp}{\mathrm dp}
 \newcommand{\dpi}[1]{(2\pi)^{#1}}
 \renewcommand{\vec}[1]{\mathbf{#1}}
+\newcommand{\Tr}{\mathrm{Tr}}
 \newcommand{\uvec}[1]{\mathbf{\hat{#1}}}
 \newcommand{\e}{\mathrm e}
 \newcommand{\tensor}[1]{\overleftrightarrow{\vec{#1}}}
