--- a/reference.bib
+++ b/reference.bib
@@ -103,3 +103,17 @@
   publisher={北京大学出版社},
   pages={142--150}
 }
+@book{schwartz-lsz,
+  author = {Matthew D. Schwartz},
+  publisher = {Cambridege University Press},
+  title = {Quantum Field Theory and the Standard Model},
+  year = {2014},
+  pages={70--72},
+}
+@book{sredinicki-ugammau,
+  author = {Mark Srednicki},
+  publisher = {Cambridege University Press},
+  title = {Quantum Field Theory},
+  year = {2007},
+  pages={240--241},
+}
