修改了spinor lsz的笔误

--- a/gaugetheory.tex
+++ b/gaugetheory.tex
@@ -1439,7 +1439,7 @@ $A'^\mu$的EoM就变成:
     &\;\partial_{3\mu}\partial_{4\nu}\braket{\psi_1\psi_2...\bar\psi_3\bar\psi_4}\notag\\
     &\;\int\d^4xi\exp{-ip_3x_3}(-m-i\gamma^\mu)u_s\textcolor{blue}{\int\d^4xi\exp{ip_4x_4}(m-i\gamma^\nu)v_s}
 \end{align}
-其中, 第一行第一个为出射正粒子, 第一行第二个为出射反粒子, 第三行第一个为入射正粒子, 第三行第四个为入射反粒子.
+其中, 第一行第一个为出射正粒子, 第一行第二个为入射反粒子, 第三行第一个为入射正粒子, 第三行第四个为出射反粒子.
 
 \newpage
 \section{离散变换}
