--- a/main.tex
+++ b/main.tex
@@ -47,6 +47,6 @@
 \newpage
 \section*{致谢}
 \addcontentsline{toc}{section}{致谢}
-非常无比感谢我最喜欢的钱禺琛劳师无微不至的答疑解惑以及阅读评价, 平均每天帮我解决两个问题! 感谢黄海洋学长的指导以及纠错、谭骐忠同学的纠错.
+非常无比感谢我最喜欢的钱禺琛劳师无微不至的答疑解惑以及阅读评价, 平均每天帮我解决两个问题! 感谢张宇泰学长与黄海洋学长的答疑解惑和纠错、徐浩翔同学的讨论以及谭骐忠同学的纠错.
 
 \end{document}
